--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/Modificar.cshtml
@@ -43,7 +43,8 @@
 
         var datos = {
             IdEmpresa: $("#IdEmpresa").val(),
-            IdTransaccionSession: $("#IdTransaccionSession").val()
+            IdTransaccionSession: $("#IdTransaccionSession").val(),
+            IdSucursal: $("#IdSucursal").val()
         }
         $.ajax({
             type: 'POST',
