--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/_GridViewPartial_archivo_bancario_det_op.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/_GridViewPartial_archivo_bancario_det_op.cshtml
@@ -62,11 +62,11 @@
         {
             column.EditFormSettings.Visible = DefaultBoolean.False;
             column.Width = Unit.Percentage(30);
-            column.FieldName = "Referencia";
+            column.FieldName = "Observacion";
             column.Caption = "Referencia";
         });
 
-        
+
         settings.Columns.Add(column =>
         {
             column.Width = Unit.Percentage(10);
