--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/Modificar.cshtml
@@ -100,11 +100,21 @@
 {
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdArchivo)
+    @Html.HiddenFor(q => q.SecuencialInicial)
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-offset-9 col-md-1">
+            
+            <div class="col-md-10">
+                <div class="form-group">
+                    <label for="ICatalogo">Nombre archivo*</label>
+                    @Html.TextBoxFor(q => q.Nom_Archivo, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.Nom_Archivo, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            
+            <div class="col-md-1">
                 <label for="IdImprimirtxt"></label>
                 <div class="form-group">
                     <a type="button" class="btn btn-primary form-control" title="Descargar" href="@Url.Action("get_archivo","ArchivoBancario",new { Area = "Banco", IdEmpresa = Model.IdEmpresa, IdArchivo =Model.IdArchivo },null)">
@@ -128,21 +138,21 @@
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="IdSucursal">Sucursal*</label>
-                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control", @id = "IdSucursal", @disabled ="disabled" })
+                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control", @id = "IdSucursal", @readonly = "readonly" })
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="IdBanco">Banco*</label>
-                    @Html.DropDownListFor(q => q.IdBanco, new SelectList(ViewBag.lst_cuenta_bancarias, "IdBanco", "ba_descripcion"), new { @class = "form-control", @id = "IdBanco", @disabled = "disabled" })
+                    @Html.DropDownListFor(q => q.IdBanco, new SelectList(ViewBag.lst_cuenta_bancarias, "IdBanco", "ba_descripcion"), new { @class = "form-control", @id = "IdBanco", @readonly = "readonly" })
                     @Html.ValidationMessageFor(q => q.IdBanco, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="IdBanco">Proceso bancario*</label>
-                    @Html.DropDownListFor(q => q.IdProceso_bancario, new SelectList(ViewBag.lst_proceso, "IdProceso", "NombreProceso"), new { @class = "form-control", @id = "IdProceso", @disabled = "disabled" })
+                    @Html.DropDownListFor(q => q.IdProceso_bancario, new SelectList(ViewBag.lst_proceso, "IdProceso", "NombreProceso"), new { @class = "form-control", @id = "IdProceso", @readonly = "readonly" })
                     @Html.ValidationMessageFor(q => q.IdProceso_bancario, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -169,24 +179,7 @@
             </div>
         </div>
     </div>
-    @*<div class="row">
-        <div class="col-md-12">
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label for="ICatalogo">Código archivo</label>
-                    @Html.TextBoxFor(q => q.cod_archivo, new { @class = "form-control", @disabled = "disabled" })
-                    @Html.ValidationMessageFor(q => q.cod_archivo, "", new { @class = "text-danger"})
-                </div>
-            </div>
-            <div class="col-md-9">
-                <div class="form-group">
-                    <label for="ICatalogo">Nombre archivo*</label>
-                    @Html.TextBoxFor(q => q.Nom_Archivo, new { @class = "form-control", @disabled = "disabled" })
-                    @Html.ValidationMessageFor(q => q.Nom_Archivo, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>*@
+    
 
 
     <div class="row">
@@ -229,6 +222,7 @@
             </div>
         </div>
     </div>
+    <br />
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -250,17 +244,12 @@
 
 
 <script>
-    $(function () {
-        cargar_procesos();
-        GetListBancoPorSucursal();
-
-    });
         $("#IdBanco").change(function () {
-        $("#IdProceso").empty();
         cargar_procesos();
     });
     $("#IdSucursal").change(function () {
         GetListBancoPorSucursal();
+        cargar_procesos();
     });
 
         function GetListBancoPorSucursal() {
@@ -294,7 +283,8 @@
         $("#IdProceso").empty();
 
                 var datos = {
-                    IdBanco: $("#IdBanco").val()
+                    IdBanco: $("#IdBanco").val(),
+                    SeContabiliza: 1
                 }
 
                 $.ajax({
