grids procesar rol

--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Contrato/_GridViewPartial_contratos_por_vencer.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Contrato/_GridViewPartial_contratos_por_vencer.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridViewPartial_contratos_por_vencer";
-        settings.CallbackRouteValues = new { Controller = "Contrato", Action = "GridViewPartial_contratos_por_vencer" };
+        settings.CallbackRouteValues = new { Controller = "Contrato", Action = "GridViewPartial_contratos_por_vencer", FechaCorte = ViewBag.FechaCorte };
         settings.KeyFieldName = "IdContrato";
         settings.Width = Unit.Percentage(100);
 
