--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/Nuevo.cshtml
@@ -17,6 +17,80 @@
     }
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
+
+<script>
+
+    $(function () {
+        $("#cb_Valor").change(function () {
+            actualizarGridDetFlujo();
+        });
+    });
+
+    function MostrarModalPlantilla() {
+        $("#PlantillaModal").modal("show");
+    }
+
+    function AgregarPlantilla(IdPlantilla) {
+        var datos = {
+            Valor: $("#cb_Valor").val(),
+            IdPlantillaTipoFlujo: IdPlantilla,
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("cargar_PlantillaTipoFlujo", "TipoFlujoPlantilla",new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                console.log(data);
+                GridView_flujo_det.PerformCallback();
+            },
+            error: function (error) {
+            }
+        });
+        $("#PlantillaModal").modal("hide");
+    }
+
+    function actualizarGridDetFlujo() {
+        var datos = {
+            Valor: $("#cb_Valor").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("actualizarGridDetFlujo", "TipoFlujoBanco",new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                GridView_flujo_det.PerformCallback();
+            },
+            error: function (error) {
+            }
+        });
+    }
+
+    function CalcularPorcentaje() {
+        var valor = GridView_flujo_det.GetEditor('Valor').GetValue();
+        var ValorTotal = $("#cb_Valor").val();
+        var PorcentajeSet = (valor * 100) / ValorTotal
+
+        GridView_flujo_det.GetEditor('Porcentaje').SetValue(PorcentajeSet);
+    }
+
+    function CalcularValor() {
+        var porcentaje = GridView_flujo_det.GetEditor('Porcentaje').GetValue();
+        var ValorTotal = $("#cb_Valor").val();
+        var ValorSet = (ValorTotal * porcentaje) / 100
+
+        GridView_flujo_det.GetEditor('Valor').SetValue(ValorSet);
+    }
+</script>
 <script>
     var selectedIDs;
     function OnBeginCallback(s, e) {
@@ -72,7 +146,7 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-         },
+            },
             error: function (error) {
             }
         });
@@ -81,13 +155,15 @@
         GridView_archivo_bancario_det_op.UnselectRows();
         GridView_archivo_bancario_det.PerformCallback();
         $("#OpModal").modal("hide");
-    }
+
+    }    
 </script>
 @using (Html.BeginForm("Nuevo", "ArchivoBancario", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdArchivo, new { @id = "IdArchivo" })
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+
     if (ViewBag.MensajeSuccess != null)
     {
         <div class="alert alert-success alert-dismissible">
@@ -144,23 +220,23 @@
         </div>
     </div>
     @*<div class="row">
-        <div class="col-md-12">
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label for="ICatalogo">Código archivo</label>
-                    @Html.TextBoxFor(q => q.cod_archivo, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.cod_archivo, "", new { @class = "text-danger" })
+            <div class="col-md-12">
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label for="ICatalogo">Código archivo</label>
+                        @Html.TextBoxFor(q => q.cod_archivo, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(q => q.cod_archivo, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="col-md-9">
+                    <div class="form-group">
+                        <label for="ICatalogo">Nombre archivo*</label>
+                        @Html.TextBoxFor(q => q.Nom_Archivo, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(q => q.Nom_Archivo, "", new { @class = "text-danger" })
+                    </div>
                 </div>
             </div>
-            <div class="col-md-9">
-                <div class="form-group">
-                    <label for="ICatalogo">Nombre archivo*</label>
-                    @Html.TextBoxFor(q => q.Nom_Archivo, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.Nom_Archivo, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>*@
+        </div>*@
 
 
     <div class="row">
@@ -175,6 +251,22 @@
         </div>
     </div>
 
+
+
+
+
+    <div id="Tabs" role="tabpanel">
+        <ul class="nav nav-tabs" role="tablist">
+            <li class="active">
+                <a href="#tab_op" aria-controls="op" role="tab" data-toggle="tab">Ordenes de pago   </a>
+            </li>
+            <li>
+                <a href="#tab_flujo" aria-controls="flujo" role="tab" data-toggle="tab">Flujo</a>
+            </li>
+        </ul>
+        <div class="tab-content" style="padding-top: 20px">
+            <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_op">
+             
     <div class="modal fade" id="OpModal" role="dialog">
         <div class="modal-dialog modal-lg">
             <!-- Modal content-->
@@ -205,84 +297,125 @@
         </div>
     </div>
     <br />
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    @Html.Action("GridViewPartial_archivo_bancario_det")
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    @Html.Action("GridViewPartial_archivo_bancario_det")
 
-                                </div>
+                </div>
+            </div>
+        </div>
+    </div>
+            </div>
+
+            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_flujo">
+
+                <div class="modal fade" id="PlantillaModal" role="dialog">
+                    <div class="modal-dialog modal-lg">
+                        <!-- Modal content-->
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h4 class="modal-title">Plantilla tipo de flujo</h4>
+                            </div>
+                            <div class="modal-body">
+                                @Html.Action("GridViewPartial_TipoFlujoPlantilla_Asignar", new { Area = "Banco", Controller = "TipoFlujoPlantilla" })
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
                             </div>
                         </div>
+
                     </div>
-                    <div class="box-footer">
-                        <button type="submit" class="btn btn-primary">Guardar</button>
-                        <a class="btn btn-default" href="@Url.Action("Index","ArchivoBancario",new { Area = "Banco" },null)">Cancelar</a>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <button type="button" class="btn btn-primary" id="btn_buscar_plantilla" onclick="MostrarModalPlantilla();">
+                            <i class="fa fa-search" title="Plantilla Tipo de Flujo"></i>
+                        </button>
                     </div>
-                    @section Scripts {
-                        @Scripts.Render("~/bundles/jqueryval")
-                    }
+                </div>
+                <br />
+                @Html.Action("GridViewPartial_flujo_det", new { Area = "Banco", Controller = "TipoFlujoBanco" })
+            </div>
+
+
+        </div>
+    </div>
+
+
+
+
+    <div class="box-footer">
+        <button type="submit" class="btn btn-primary">Guardar</button>
+        <a class="btn btn-default" href="@Url.Action("Index","ArchivoBancario",new { Area = "Banco" },null)">Cancelar</a>
+    </div>
+                            @section Scripts {
+                                @Scripts.Render("~/bundles/jqueryval")
+                            }
 }
 <script>
-    $(function () {
-        GetListBancoPorSucursal();
-        cargar_procesos();
-    });
-        $("#IdBanco").change(function () {
-        cargar_procesos();
-    });
-    $("#IdSucursal").change(function () {
-        GetListBancoPorSucursal();
-        cargar_procesos();
-    });
-        function GetListBancoPorSucursal() {
-        $("#IdBanco").empty();
-        var datos = {
-            IdEmpresa: $("#IdEmpresa").val(),
-            IdSucursal: $("#IdSucursal").val()
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("GetListBancoPorSucursal", "BancoCuenta",new { Area = "Banco"})',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-                $.each(data, function (i, row) {
-                    $("#IdBanco").append("<option value=" + row.IdBanco + ">" + row.ba_descripcion+ "</option>");
-                });
-            },
-            error: function (error) {
-            }
-        });
-    }
-    function cargar_procesos() {
-        $("#IdProceso").empty();
-        var datos = {
-            IdBanco: $("#IdBanco").val(),
-            SeContabiliza: 1
-        }
-                $.ajax({
-                    type: 'POST',
-                    data: JSON.stringify(datos),
-                    url: '@Url.Action("get_list_procesos", "ProcesosBancariosPorEmpresa", new { Area = "General" })',
-                    async: false,
-                    bDeferRender: true,
-                    bProcessing: true,
-                    dataType: 'json',
-                    contentType: 'application/json; charset=utf-8',
-                    success: function (data) {
+                                $(function () {
+                                    GetListBancoPorSucursal();
+                                    cargar_procesos();
+                                });
+                                $("#IdBanco").change(function () {
+                                    cargar_procesos();
+                                });
+                                $("#IdSucursal").change(function () {
+                                    GetListBancoPorSucursal();
+                                    cargar_procesos();
+                                });
+                                function GetListBancoPorSucursal() {
+                                    $("#IdBanco").empty();
+                                    var datos = {
+                                        IdEmpresa: $("#IdEmpresa").val(),
+                                        IdSucursal: $("#IdSucursal").val()
+                                    }
+                                    $.ajax({
+                                        type: 'POST',
+                                        data: JSON.stringify(datos),
+                                        url: '@Url.Action("GetListBancoPorSucursal", "BancoCuenta",new { Area = "Banco"})',
+                                        async: false,
+                                        bDeferRender: true,
+                                        bProcessing: true,
+                                        dataType: 'json',
+                                        contentType: 'application/json; charset=utf-8',
+                                        success: function (data) {
+                                            $.each(data, function (i, row) {
+                                                $("#IdBanco").append("<option value=" + row.IdBanco + ">" + row.ba_descripcion + "</option>");
+                                            });
+                                        },
+                                        error: function (error) {
+                                        }
+                                    });
+                                }
+                                function cargar_procesos() {
+                                    $("#IdProceso").empty();
+                                    var datos = {
+                                        IdBanco: $("#IdBanco").val(),
+                                        SeContabiliza: 1
+                                    }
+                                    $.ajax({
+                                        type: 'POST',
+                                        data: JSON.stringify(datos),
+                                        url: '@Url.Action("get_list_procesos", "ProcesosBancariosPorEmpresa", new { Area = "General" })',
+                                        async: false,
+                                        bDeferRender: true,
+                                        bProcessing: true,
+                                        dataType: 'json',
+                                        contentType: 'application/json; charset=utf-8',
+                                        success: function (data) {
 
-                        $.each(data, function (i, row) {
-                            $("#IdProceso").append("<option value=" + row.IdProceso + ">" + row.NombreProceso + "</option>");
+                                            $.each(data, function (i, row) {
+                                                $("#IdProceso").append("<option value=" + row.IdProceso + ">" + row.NombreProceso + "</option>");
 
-                        });
-                    },
-                    error: function (error) {
-                    }
-                });
-    };
+                                            });
+                                        },
+                                        error: function (error) {
+                                        }
+                                    });
+                                };
 </script>
