--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Anular.cshtml
@@ -159,9 +159,9 @@
         <div class="col-md-12">
             <div class="col-md-3">
                 <div class="form-group">
-                    <label for="IdBanco_acreditacion">Flujo</label>
-                    @Html.Partial("_CmbFlujo_OP", Model.IdTipoFlujo)
-                    @Html.ValidationMessageFor(q => q.IdTipoFlujo, "", new { @class = "text-danger" })
+                    <label for="IdBanco_acreditacion">Referencia</label>
+                    @Html.TextBoxFor(q => q.ReferenciaGen, new { @class = "form-control", @id = "observacion" })
+                    @Html.ValidationMessageFor(q => q.ReferenciaGen, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-9">
