--- a/ERP/Core.Erp.Web/Areas/General/Views/TipoDocumentoTalonario/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/TipoDocumentoTalonario/Index.cshtml
@@ -1,16 +1,78 @@
-﻿
+﻿@model Core.Erp.Info.General.tb_sis_Documento_Tipo_Talonario_Info
 @{
     ViewBag.Title = "Talonarios";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
     }
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Layout/_LayoutConsulta.cshtml";
 }
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Index", "TipoDocumentoTalonario", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
+    <div class="box ">
+        <div class="box-header with-border">
+            <div class="row">
+                <div class="col-md-12">
+                    <button type="submit" class="btn btn-primary">Aplicar filtros</button>
+                </div>
+            </div>
+            <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                    <i class="fa fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                    <i class="fa fa-times"></i>
+                </button>
+            </div>
+        </div>
+        <div class="box-body">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="IdSucursal">Sucursal*</label>
+                            <div class="form-group">
+                                @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_Descripcion"), new { @class = "form-control" })
+                                @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="IdSucursal">Tipo documento*</label>
+                            <div class="form-group">
+                                @Html.DropDownListFor(q => q.CodDocumentoTipo, new SelectList(ViewBag.lst_doc, "codDocumentoTipo", "descripcion"), new { @class = "form-control" })
+                                @Html.ValidationMessageFor(q => q.CodDocumentoTipo, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /.box-body -->
+    </div>
 
-    @Html.Action("GridViewPartial_tipodocumentotal")
+    <div class="box">
+        <div class="box-header with-border">
+            <h3 class="box-title">@ViewBag.Title</h3>
+            <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                    <i class="fa fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                    <i class="fa fa-times"></i>
+                </button>
+            </div>
+        </div>
+        <div class="box-body">
+            @Html.Action("GridViewPartial_tipodocumentotal", new { IdSucursal = Model.IdSucursal, CodDocumentoTipo = Model.CodDocumentoTipo })
+        </div>
+        <!-- /.box-body -->
+        <div class="box-footer">
+            [@Session["IdEmpresa"]] @Session["nom_empresa"]
+        </div>
+        <!-- /.box-footer-->
+    </div>
 
 }
