--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepartamentoAF/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepartamentoAF/Nuevo.cshtml
@@ -16,6 +16,33 @@
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
+                <label for="IdArea">Area*</label>
+                    @Html.HiddenFor(q => q.IdArea)
+                    @Html.DevExpress().ComboBoxFor(q => q.IdArea, settings =>
+               {
+                   settings.Name = "IdArea";
+                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                   settings.Properties.Columns.Add("IdArea", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+                   settings.Properties.Columns.Add("Descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(90);
+                   //Campo ID
+                   settings.Properties.ValueField = "IdArea";
+                   settings.Properties.ValueType = typeof(decimal);
+                   settings.Properties.TextField = "Descripcion";
+                   settings.Properties.NullText = "== Seleccione ==";
+
+                   settings.Properties.DropDownButton.Enabled = false;
+                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                   settings.ReadOnly = true;
+               }).BindList(ViewBag.lst_area).GetHtml()
+                    @Html.ValidationMessageFor(q => q.IdArea, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
                 <div class="form-group">
                     <label for="Descripcion">Descripción*</label>
                     @Html.TextBoxFor(q => q.Descripcion, new { @class = "form-control" })
